pull supported media types, but push down registry